--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # OSX
 #
-/twfl/.DS_Store
+twfl/.DS_Store
 
 # Xcode
 #
-/twfl/build/
+twfl/build/
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -33,7 +33,7 @@ local.properties
 
 # node.js
 #
-./twfl/node_modules/
+twfl/node_modules/
 npm-debug.log
 yarn-error.log
 
